# oaqjp-final-project-emb-ai

./: pyproject.toml  server.py
EmotionDetection/: __init__.py  emotion_detection.py
tests/: test_emotion_detection.py
