[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EmotionDetection"
version = "0.1.0"
description = "Final course project"
authors = [
    {name = "Maksim Terpilovskii", email = "maxt_edu@gmail.com"},
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
